@@ -6,4 +6,4 @@ libfake.so.1 #PACKAGE# #MINVER#
 | libvirtualfake
  symbol1_fake2@Base 1.0 1
  symbol2_fake2@Base 1.0
- symbol3_fake2@Base 1.0
+ symbol3_fake2@Base 1.1
