@@ -3,5 +3,5 @@ libfake.so.1 libfake1 #MINVER#
  symbol2_fake1@Base 0.9
  symbol_before@Base 0.9
 #include "symbols.fake-1"
- symbol3_fake1@Base 1.1
+ symbol3_fake1@Base 0
  symbol_after@Base 1.1
